[tool.poetry]
name = "nlp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
torch = "^2.7.1"
stanza = "^1.10.1"
transformers = "^4.52.4"
sentence-transformers = "^4.1.0"
scikit-learn = "^1.7.0"
matplotlib = "^3.10.3"
pandas = "^2.3.0"
numpy = "^2.3.1"
python-dotenv = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
